<resources>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">NcEyhkcrNpeMjeBf6nbPxInjsGcZuRo9tC6vZ9Ul</string>
    <string name="back4app_client_key">1kMYtXERXMThYQGCTSY4CmtzYcKyJGC6CCpIv0vY</string>

    <string name="app_name">MyPictureDictionary</string>
    <string name="word_list_preposition">In</string>
    <string name="word_list_name">Default_List</string>
    <string name="word_date_label">Added at %1$s</string>
    <string name="word_search_label">Search in ...</string>
    <string name="new_word">New word</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d words</string>
    <string name="word_name_hint">Word</string>
    <string name="word_text_hint">Description in text</string>
    <string name="tag_text_hint">+ #tag</string>
    <string name="edit_word">Edit Word</string>
    <string name="delete_word">Delete Word</string>
    <string name="message_no_word">No words in this List</string>
    <string name="tag_edit_dialog_title">Add a new tag</string>

    <plurals name="subtitle_prural">
        <item quantity="one">%1$d word</item>
        <item quantity="other">%1$d words</item>
    </plurals>
</resources>
