<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_list_preposition" />

        <TextView
            android:id="@+id/word_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/word_list_name"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_name_hint"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/word_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_text_hint"
        android:textAlignment="center"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/meaning_image_1"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/meaning_image_2"
            android:layout_width="140dp"
            android:layout_height="88dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/meaning_image_3"
            android:layout_width="140dp"
            android:layout_height="88dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_text_hint"
        android:textAllCaps="false"/>


</LinearLayout>