<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_list_preposition"/>

        <TextView
            android:id="@+id/word_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="List Name"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Word Name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/word_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Word description space"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/meaning_image_1"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/meaning_image_2"
            android:layout_width="140dp"
            android:layout_height="88dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/meaning_image_3"
            android:layout_width="140dp"
            android:layout_height="88dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/word_tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Tag1"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/word_tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Tag2"/>
    </LinearLayout>

    <TextView
        android:id="@+id/word_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_search_label"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/word_added_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_date_label"/>


</LinearLayout>